[project]
name = "sample-agentic-image-enhancer"
version = "0.1.0"
description = "Vision LLM-driven document image enhancement with agentic assessment, targeted OpenCV operations, and automated quality comparison."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "BADGERS Document Processing Pipeline" }]
keywords = [
    "document-processing",
    "image-enhancement",
    "vision-llm",
    "historical-documents",
    "opencv",
    "anthropic",
    "agentic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "opencv-python-headless>=4.9.0,<5.0",
    "numpy>=1.26.0,<3.0",
    "Pillow>=10.0.0",
    "anthropic[bedrock]>=0.40.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.8.0",
    "nbstripout>=0.9.0",
    "ipykernel>=7.2.0",
    "pip-audit>=2.10.0",
    "strands-agents>=0.1.0",
    "strands-agents-builder>=0.1.0",
    "opencv-stubs>=0.1.3",
    "ipywidgets>=8.1.8",
]

[project.optional-dependencies]
# AWS Bedrock backend (swap anthropic direct for bedrock)
bedrock = ["boto3>=1.34.0", "anthropic[bedrock]>=0.40.0"]

# Jupyter notebook development
notebook = ["jupyter>=1.0", "matplotlib>=3.8.0", "ipywidgets>=8.0"]

# Document dewarping (future — heavier deps)
dewarp = ["torch>=2.1.0", "torchvision>=0.16.0", "onnxruntime>=1.16.0"]

# Everything for local development
dev = [
    "agentic-image-enhancer[notebook,bedrock]",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.8",
    "pre-commit>=3.0",
]

[project.urls]
Repository = "https://github.com/your-org/agentic-image-enhancer"
Documentation = "https://github.com/your-org/agentic-image-enhancer#readme"

# ── Tool configuration ──

[tool.hatch.build.targets.wheel]
only-include = ["tools", "utils", "prompts", "main.py"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false # relaxed for CV code with numpy arrays
ignore_missing_imports = true # cv2 stubs are incomplete
